Lets try a new thing

--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -58,11 +58,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../index.html">Home</a>
+                    <li class="active"><a href="#">Home</a>
                     </li>
-                    <li><a href="../blog.html">Blog</a>
+                    <li><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Download</a>
                     </li>
-                    <li class="dropdown">
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="../cancer.html">Cancer Checker</a>
@@ -78,16 +78,16 @@
                             <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <p class="navbar-text navbar-right">Other Things</p>
                     </li>-->
-                    <li>
+                    <!--<li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>
-                    <li class="active"><a href="#">Meteor Game</a>
+                    </li>-->
+                    <li class="redbox"><a href="../index.html">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
