I like the new thing

--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -87,7 +87,7 @@
                     <!--<li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="redbox"><a href="../index.html">StormyJet.com</a>
+                    <li style="background-color:#FFCECE;"><a href="../index.html">Stormy's Wesbite</a>
                     </li>
                 </ul>
             </div>
