--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
-                    </li>-->
+                    </li>
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>
-                    <li><a href="MeteorGame/index.html">Meteor Game</a>
+                    </li>-->
+                    <li style="background-color:#FFCECE;"><a href="MeteorGame/index.html">Meteor Game</a>
                     </li>
                 </ul>
             </div>
