--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Words by Stormy</a>
+                <a class="navbar-brand" href="index.html">Stormy's Website</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -107,11 +107,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <p class="navbar-text navbar-right">Other Things</p>
-                    </li>-->
+                    </li>
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>
-                    <li><a href="MeteorGame/index.html">Meteor Game</a>
+                    </li>-->
+                    <li style="background-color:#FFCECE;"><a href="MeteorGame/index.html">Meteor Game</a>
                     </li>
                 </ul>
             </div>
