--- a/open.html
+++ b/open.html
@@ -84,7 +84,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
+            <a class="navbar-brand" href="index.html">Stormy's Website</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -113,11 +113,11 @@
             <ul class="nav navbar-nav navbar-right">
                 <!--<li>
                     <p class="navbar-text navbar-right">Other Things</p>
-                </li>-->
+                </li>
                 <li>
                     <a href="http://stormyjet.com/sNet">sNet</a>
-                </li>
-                <li><a href="MeteorGame/index.html">Meteor Game</a>
+                </li>-->
+                <li style="background-color:#FFCECE;"><a href="MeteorGame/index.html">Meteor Game</a>
                 </li>
             </ul>
         </div>
@@ -168,7 +168,7 @@
         </div>
         <h3>Using UniNav</h3>
         <br>
-        <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>bootstrap.min.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
+        <p>UniNav is generally a thing that will Break Immersion. Generally inserting the css <kbd>bootstrap.min.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
             <br>For this example to work correctly, some things were removed, if you're getting the nav code from here, make sure you add <kbd>navbar-fixed-top</kbd> into the first div class.
 
             <!--Nav Begins Here-->
