--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -140,63 +140,22 @@
                                 <li>Fixed a couple things.
                                     <li>thats it
                     </ul>
-
-                    <br>
-                    <br>
-                    <br>
-
-                    <br>
-
-                </p>
-                <br>
-
-
             </center>
-
+</body>
+<hr>
+<foot>
+    <div class="footer ">
+        <p>
+            Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
+        </p>
     </div>
 
-    <center>
-        </div>
+</foot>
 
+</div>
+<!-- /container -->
 
-
-
-    </center>
-    <hr>
-    <center>
-        <footer>
-
-
-
-
-
-    </center>
-    </footer>
-
-    </div>
-    <!-- /container -->
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
-    </script>
-
-    <script src="js/vendor/bootstrap.min.js"></script>
-
-    <script src="js/main.js"></script>
-
-    <script>
-        var _gaq = [
-            ['_setAccount', 'UA-XXXXX-X'],
-            ['_trackPageview']
-        ];
-        (function(d, t) {
-            var g = d.createElement(t),
-                s = d.getElementsByTagName(t)[0];
-            g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g, s)
-        }(document, 'script'));
-    </script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
