--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script>
+    <script src="js/google.js">
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
@@ -164,28 +164,11 @@
     <div class="container">
         <div>
             <script>
-                //candy loader
-                var request = new XMLHttpRequest();
-                request.onload = function() {
-                    // open the candies
-                    var fileContent = this.responseText;
-                    // split into lines
-                    var fileContentLines = fileContent.split('\n');
-                    // get a random candy
-                    var randomLineIndex = Math.floor(Math.random() * fileContentLines.length);
-                    // store the candy for use
-                    var randomLine = fileContentLines[randomLineIndex];
-
-                    // we grab the div id and insert a candy
-                    document.getElementById('candy').innerHTML = randomLine;
-                };
-                 //were grabbing the candies from here.
-                request.open('GET', 'indexcandy.txt', true);
-                request.send();
             </script>
 
             <div class="jumbotron ">
                 <p style="font-size: 750%;">Stormy's Website</p>
+                <!--Candies are shown here, if they don't load, the text is shown-->
                 <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
                 <br>
                 <br>
@@ -206,7 +189,7 @@
                 <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
             </div>
             <hr>
-            <!-- Example row of columns -->
+            <!-- 3 columns -->
             <div class="row ">
                 <div class="col-lg-4 ">
                     <h2>Meteor Game</h2>
@@ -233,46 +216,27 @@
                 </div>
             </div>
 
-            <!-- Site footer -->
+            <!-- Footer Begins Here -->
             <div class="footer ">
                 <p>
-                    Powered by <a href="network.html ">sNet</a>. StormyJet.com is <a href="open.html">open source</a>.
+                    Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
                 </p>
             </div>
 
         </div>
         <!-- /container -->
 
-
-        <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>
-            window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
-        </script>
-
-        <script src="js/vendor/bootstrap.min.js"></script>
-
-        <script src="js/main.js"></script>
-
-        <script>
-            var _gaq = [
-                ['_setAccount', 'UA-XXXXX-X'],
-                ['_trackPageview']
-            ];
-            (function(d, t) {
-                var g = d.createElement(t),
-                    s = d.getElementsByTagName(t)[0];
-                g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-                s.parentNode.insertBefore(g, s)
-            }(document, 'script'));
-        </script>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/docs.min.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
+</script>
+<script src="js/candy.js"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
