--- a/blog.html
+++ b/blog.html
@@ -2,22 +2,6 @@
 <html>
 
 <head>
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-31660701-1', 'stormyjet.com');
-        ga('send', 'pageview');
-    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,11 +47,9 @@
             top: 125px;
         }
     </style>
-
 </head>
 
 <body>
-
     <!--Nav Begins Here-->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -127,24 +109,9 @@
 <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
-
 <script src="js/vendor/bootstrap.min.js"></script>
-
 <script src="js/main.js"></script>
-
-<script>
-    var _gaq = [
-        ['_setAccount', 'UA-XXXXX-X'],
-        ['_trackPageview']
-    ];
-    (function(d, t) {
-        var g = d.createElement(t),
-            s = d.getElementsByTagName(t)[0];
-        g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g, s)
-    }(document, 'script'));
-</script>
-</body>
+<script src="js/google.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/docs.min.js"></script>
