--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -97,7 +97,6 @@
     <!--Nav ends here-->
     <br>
     <br>
-
     <div class="jumbotron ">
         <!--<center><h1><h1>Meteor Game</h1></h1>-->
         <h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3>
@@ -107,14 +106,9 @@
         <br>
         <br>
         </p>
-
         <p>
-
-
-
             <h2><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2>
             <br>
-
             <br>
             <h3> FAQ </h3>
             <br>
@@ -149,16 +143,13 @@
             Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
         </p>
     </div>
-
 </foot>
-
 </div>
 <!-- /container -->
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </body>
+<script src="js/google.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/docs.min.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </html>
