--- a/index.html
+++ b/index.html
@@ -2,22 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="js/google.js">
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-31660701-1', 'stormyjet.com');
-        ga('send', 'pageview');
-    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,32 +28,7 @@
     <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
-
     <title>Stormy's Website</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-
-
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <!-- STYLE SHEET FOR UNI-NAVBAR-->
-
-    <!--[if lt IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
-    <!--[if gte IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
 </head>
 
 <body>
@@ -227,6 +186,8 @@
         <!-- /container -->
 
 </body>
+<!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
+<script src="js/google.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/docs.min.js"></script>
@@ -237,6 +198,7 @@
 <script src="js/candy.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </body>
 
 </html>
