--- a/index.html
+++ b/index.html
@@ -123,68 +123,69 @@
     <!-- Jumbotron -->
     <div class="container">
         <div>
-            <script>
-            </script>
-
-            <div class="jumbotron ">
-                <p style="font-size: 750%;">Stormy's Website</p>
-                <!--Candies are shown here, if they don't load, the text is shown-->
-                <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
-                <br>
-                <br>
-                <hr>
-                <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
-                    <br>
-                    <a href="cancer.html">The free online cancer checker</a>
-                    <br>
-                    <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
-                    <br>
-                    <a href="NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
-                    <br>
-                    <a href="YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
-                    <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
-                    <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
-                    <br>
-                </p>
-                <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
+            <div class="jumbotron">
+                <center>
+                    <p style="font-size: 750%;">Stormy's Website</p>
+                    <!--Candies are shown here, if they don't load, the text is shown-->
+                    <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
+                </center>
             </div>
+            <br>
+            <br>
             <hr>
-            <!-- 3 columns -->
-            <div class="row ">
-                <div class="col-lg-4 ">
-                    <h2>Meteor Game</h2>
-                    <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                    <p><a class="btn btn-primary " href="http://meteorgame.github.io " role="button ">View details &raquo;</a>
-                    </p>
-                </div>
-                <div class="col-lg-4 ">
-                    <h2>Hiring</h2>
-
-                    <p>You can contact me at
-                        <br>
-                        <kbd>business 'at' this domain</kbd>
-                        <br>and we can work things out if you ever need a crappy website like this one.
-                        <p>
-
-                        </p>
-                </div>
-                <div class="col-lg-4 ">
-                    <h2>Blog</h2>
-                    <p>I have one of those.</p>
-                    <p><a class="btn btn-primary " href="network.html " role="button ">Go now &raquo;</a>
-                    </p>
-                </div>
-            </div>
-
-            <!-- Footer Begins Here -->
-            <div class="footer ">
-                <p>
-                    Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
+            <!--end the gray box-->
+            <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
+                <br>
+                <a href="cancer.html">The free online cancer checker</a>
+                <br>
+                <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                <br>
+                <a href="NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
+                <br>
+                <a href="YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
+                <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
+                <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
+                <br>
+            </p>
+            <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
+        </div>
+        <hr>
+        <!-- 3 columns -->
+        <div class="row ">
+            <div class="col-lg-4 ">
+                <h2>Meteor Game</h2>
+                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
+                <p><a class="btn btn-primary " href="http://meteorgame.github.io " role="button ">View details &raquo;</a>
                 </p>
             </div>
+            <div class="col-lg-4 ">
+                <h2>Hiring</h2>
 
+                <p>You can contact me at
+                    <br>
+                    <kbd>business 'at' this domain</kbd>
+                    <br>and we can work things out if you ever need a crappy website like this one.
+                    <p>
+
+                    </p>
+            </div>
+            <div class="col-lg-4 ">
+                <h2>Blog</h2>
+                <p>I have one of those.</p>
+                <p><a class="btn btn-primary " href="network.html " role="button ">Go now &raquo;</a>
+                </p>
+            </div>
         </div>
-        <!-- /container -->
+
+        <!-- Footer Begins Here -->
+        <div class="footer ">
+            <p>
+                Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
+            </p>
+        </div>
+
+    </div>
+    <!-- /container -->
 
 </body>
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
