--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div>
             <div class="jumbotron">
                 <center>
-                    <p style="font-size: 750%;">Stormy's Website</p>
+                    <p style="font-size: 750%;word-wrap:break-word;">Stormy's Website</p>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
                 </center>
