--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li style="background-color:#FFCECE;"><a href="MeteorGame/index.html">Meteor Game</a>
+                    <li class="bg-danger"><a href="MeteorGame/index.html">Meteor Game</a>
                     </li>
                 </ul>
             </div>
