--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -87,7 +87,7 @@
                     <!--<li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li style="background-color:#FFCECE;"><a href="../index.html">Stormy's Wesbite</a>
+                    <li class="bg-info"><a href="../index.html">Stormy's Wesbite</a>
                     </li>
                 </ul>
             </div>
@@ -152,4 +152,5 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/docs.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+
 </html>
