--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li style="background-color:#FFCECE;"><a href="MeteorGame/index.html">Meteor Game</a>
+                    <li class="bg-info"><a href="MeteorGame/index.html">Meteor Game</a>
                     </li>
                 </ul>
             </div>
