--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="MeteorGame/index.html">Meteor Game</a>
+                    <li class="bg-info"><a href="MeteorGame/index.html">Meteor Game</a>
                     </li>
                 </ul>
             </div>
@@ -128,7 +128,7 @@
                     <p style="font-size: 750%;word-wrap:break-word;">Stormy's Website</p>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
-                </center>
+
             </div>
             <!--end the gray box-->
             <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
@@ -145,6 +145,7 @@
                 <br>
             </p>
             <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
+            </center>
         </div>
         <hr>
         <!-- 3 columns -->
