--- a/open.html
+++ b/open.html
@@ -117,7 +117,7 @@
                 <li>
                     <a href="http://stormyjet.com/sNet">sNet</a>
                 </li>-->
-                <li style="background-color:#FFCECE;"><a href="MeteorGame/index.html">Meteor Game</a>
+                <li class="bg-info"><a href="MeteorGame/index.html">Meteor Game</a>
                 </li>
             </ul>
         </div>
