--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -9,37 +9,13 @@
 <meta name="author" content="StormyJet" />
 
 <head>
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-31660701-1', 'stormyjet.com');
-        ga('send', 'pageview');
-    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Meteor Game</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/png" href="img/favicon.png">
-
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <!-- STYLE SHEET FOR UNI-NAVBAR-->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
 </head>
 
@@ -147,10 +123,17 @@
 </div>
 <!-- /container -->
 </body>
+<!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
 <script src="js/google.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/docs.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
+</script>
+<script src="js/candy.js"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 
 </html>
