--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -73,45 +73,47 @@
     <!--Nav ends here-->
     <br>
     <br>
-    <div class="jumbotron ">
-        <!--<center><h1><h1>Meteor Game</h1></h1>-->
-        <h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3>
-        <br>
-        <h4> This game is free. If anyone is charging you for this game, you have been ripped off unfortunately :( </h4>
-        <h4> To anyone promoting this game, please link to this page and not a direct download link </h4>
-        <br>
-        <br>
-        </p>
-        <p>
-            <h2><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2>
+    <div>
+        <center>
+            <!--<center><h1><h1>Meteor Game</h1></h1>-->
+            <h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3>
+            <br>
+            <h4> This game is free. If anyone is charging you for this game, you have been ripped off unfortunately :( </h4>
+            <h4> To anyone promoting this game, please link to this page and not a direct download link </h4>
             <br>
             <br>
-            <h3> FAQ </h3>
-            <br>
-            <h4> Why? </h4>
-            <br>why not?
-            <h4>Just how difficult is this?<br></h4>
-            Well....
-            <br>After leaving sim mode on for <em> 10 minutes </em> the game had spawned over <em> 50,000 </em> meteors. 50,000 meteors, at once.
-            <h3> Older Versions! </h3>
-            <br>
-            <h4> The older versions of Meteor Game are not supported. Any Bugs you find are your responsiblity. You're on your own.</h4>
-            <br>
-            <h4><a href="Retro%20Meteor%20Game.exe"> Click here to the "Retro" version of Meteor Game</a></h4>
-            <small><a href="Meteor%20Game%20classic.exe">the super-super old version with music i dont own. please dont sue me chipzel</a></small>
-            <br>
-            <center>
-                <p>
-                    Changelog!
-                    <br>Version 2.5:
-                    <ul>
-                        <li>Added back Dev Mode, not telling where it is.
-                            <li>Various bug fixes
-                                <li>Fixed a couple things.
-                                    <li>thats it
-                    </ul>
-            </center>
+            </p>
+            <p>
+                <h2><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2>
+                <br>
+                <br>
+                <h3> FAQ </h3>
+                <br>
+                <h4> Why? </h4>
+                <br>why not?
+                <h4>Just how difficult is this?<br></h4>
+                Well....
+                <br>After leaving sim mode on for <em> 10 minutes </em> the game had spawned over <em> 50,000 </em> meteors. 50,000 meteors, at once.
+                <h3> Older Versions! </h3>
+                <br>
+                <h4> The older versions of Meteor Game are not supported. Any Bugs you find are your responsiblity. You're on your own.</h4>
+                <br>
+                <h4><a href="Retro%20Meteor%20Game.exe"> Click here to the "Retro" version of Meteor Game</a></h4>
+                <small><a href="Meteor%20Game%20classic.exe">the super-super old version with music i dont own. please dont sue me chipzel</a></small>
+                <br>
+                <center>
+                    <p>
+                        Changelog!
+                        <br>Version 2.5:
+                        <ul>
+                            <li>Added back Dev Mode, not telling where it is.
+                                <li>Various bug fixes
+                                    <li>Fixed a couple things.
+                                        <li>thats it
+                        </ul>
+                </center>
 </body>
+</center>
 <hr>
 <foot>
     <div class="footer ">
