--- a/blog.html
+++ b/blog.html
@@ -101,9 +101,15 @@
         </div>
     </div>
     <!--Nav ends here-->
-    <div id="content">
+    <script type="text/javascript" src="http://funkability.tumblr.com/api/read/json"></script>
+    2
+    <script type="text/javascript">
+        3 document.write('<a href="' + tumblr_api_read['posts'][0]['url'] + '">my most recent Tumblr post.</a>');
+        4
+    </script>
+    <!--<div id="content">
         <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
-    </div>
+    </div>-->
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>
