lol thats not my blof

--- a/blog.html
+++ b/blog.html
@@ -101,7 +101,7 @@
         </div>
     </div>
     <!--Nav ends here-->
-    <script type="text/javascript" src="http://funkability.tumblr.com/api/read/json"></script>
+    <script type="text/javascript" src="http://stormyswords.tumblr.com/api/read/json"></script>
     2
     <script type="text/javascript">
         3 document.write('<a href="' + tumblr_api_read['posts'][0]['url'] + '">my most recent Tumblr post.</a>');
