--- a/blog.html
+++ b/blog.html
@@ -101,25 +101,21 @@
         </div>
     </div>
     <!--Nav ends here-->
-    <script type="text/javascript" src="http://stormyswords.tumblr.com/api/read/json"></script>
-    2
-    <script type="text/javascript">
-        3 document.write('<a href="' + tumblr_api_read['posts'][0]['url'] + '">my most recent Tumblr post.</a>');
-        4
-    </script>
-    <!--<div id="content">
-        <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
-    </div>-->
+    <div id="content">
+        <script type=”text/javascript” src=”http://yourtumblrname.tumblr.com/js”></script>
+        <!--<iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />-->
+        < /div>
 </body>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
-</script>
-<script src="js/vendor/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/google.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/docs.min.js"></script>
+< script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+    </script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
+    </script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/google.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/docs.min.js"></script>
 
 </html>
