--- a/blog.html
+++ b/blog.html
@@ -102,8 +102,7 @@
     </div>
     <!--Nav ends here-->
     <div id="content">
-        <script type=”text/javascript” src=”http://yourtumblrname.tumblr.com/js”></script>
-        <!--<iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />-->
+        <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
         < /div>
 </body>
 < script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
