IM SCREWED IF THEY EVER REMOVE <CENTER>

--- a/index.html
+++ b/index.html
@@ -179,9 +179,11 @@
         <hr>
         <!-- Footer Begins Here -->
         <div class="footer ">
-            <p>
-                Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
-            </p>
+            <center>
+                <p>
+                    Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
+                </p>
+            </center>
         </div>
 
     </div>
