--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
                             </li>
                             <li class="divider"></li>
                             <li class="dropdown-header">Technical Stuff</li>
-                            <li><a href="open.html">Open Source Docs</a>
-                            </li>
                             <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
                             </li>
                         </ul>
@@ -172,7 +170,7 @@
         <div class="footer ">
             <center>
                 <p>
-                    Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
+                    Made by StormyJet. Uses code from Bootstrap.
                 </p>
             </center>
         </div>
