--- a/nostalgia/index-afteruni.html
+++ b/nostalgia/index-afteruni.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">@@ -27,139 +28,89 @@
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
     <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
