--- a/404.html
+++ b/404.html
@@ -33,12 +33,7 @@
     <title>404</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-
-
-    <link href="css/justified-nav.css" rel="stylesheet">
+    <link href="http://stormyjet.com/core/css/bootstrap.min.css" rel="stylesheet">
     <div class="container">
         <div</div>
             <center>
