--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
                             document.write(document.URL);
                         </script>
                         isn't even real.</p>
-                    <p class="lead"><a href="index.html">Wanna go to the home page?</a>
+                    <p class="lead"><a href="http://stormyjet.com">Wanna go to the home page?</a>
                     </p>
                 </body>
             </center>
