--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <center>
                     <p style="font-size: 750%;word-wrap:break-word;">Stormy's Website</p>
                     <!--Candies are shown here, if they don't load, the text is shown-->
-                    <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
+                    <div id="candy" style="font-size: 200%;"></div>
 
             </div>
             <!--end the gray box-->
