google webmasters verify

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script src="core/js/google.js"></script>
 
 <head>
+    <meta name="google-site-verification" content="OkvES3vkDmmuSt2GLXE6-uSqPoyssekJ5quiSMuP5RM" />
     <link rel="shortcut icon" href="/core/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/core/img/apple-touch-icon-114x114.png">
