--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website <span class="badge">Beta</span>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website
                 </a>
 
 
