--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <link href="core/css/bootstrap.min.css" rel="stylesheet">
 <script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
+<script src="core/js/bootstrap.min.js"></script>
 
 <head>
+    <meta name="description" content="This is the official website for StormyJet. I don\'t know why I said official because I\'m not popular enough for fakes.">
+    <meta name="keywords" content="stormy , stormyjet , stormys website , website ">
+    <meta name="robot" content="index,follow">
+    <meta name="author" content="stormyjet">
+    <meta name="language" content="en-us">
+    <meta name="revisit-after" content="30">
     <meta name="google-site-verification" content="OkvES3vkDmmuSt2GLXE6-uSqPoyssekJ5quiSMuP5RM" />
     <link rel="shortcut icon" href="/core/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
@@ -187,10 +194,9 @@
 <script>
     window.jQuery || document.write('<script src="core/js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
-<script src="core/js/vendor/bootstrap.min.js"></script>
+<!--<script src="core/js/vendor/bootstrap.min.js"></script>-->
 <script src="core/js/main.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
 <script src="core/js/docs.min.js"></script>
 </body>
 
