--- a/nostalgia/index-afteruni.html
+++ b/nostalgia/index-afteruni.html
@@ -91,7 +91,9 @@
             <div class="col-lg-4">
                 <h2>About Me</h2>
                 <p>I make <a href="https://www.youtube.com/user/ItsStormyJet">YouTube Videos </a>
-                    <br>and I am a mod on the <a href="http://nerdcubedservers.co.uk">NerdCubed Fanservers</a><small></p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+                    <br>
+                </p>
+                <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a>
+                </p>
+            </div>
         </div>
-      </div>
