--- a/nostalgia/index-beforeuni.html
+++ b/nostalgia/index-beforeuni.html
@@ -94,9 +94,9 @@
             <br>
         </div>
         <br>
-        <div style="font-family: 'Special Elite', cursive; font-size:48pt;">Sorry to Interrupt
+        <!--<div style="font-family: 'Special Elite', cursive; font-size:48pt;">Sorry to Interrupt
 
-        </div>
+        </div>-->
         <p style="font-size:30pt;">
             <br>
             <h3>My name is StormyJet, I make Internety things.</h3>
