--- a/nostalgia/index-afteruni.html
+++ b/nostalgia/index-afteruni.html
@@ -45,13 +45,13 @@
                 <li><a href="http://twitter.com/stormyjet">Twitter</a>
                 </li>
                 <!-- This line to be replaced with proper source-->
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a>
+                <li><a href="explain.html">Source</a>
                 </li>
-                <li><a href="http://meteorgame.github.io">Meteor Game</a>
+                <li><a href="explain.html">Meteor Game</a>
                 </li>
-                <li><a href="http://mcfs.github.io">MCFS</a>
+                <li><a href="explain.html">MCFS</a>
                 </li>
-                <li><a href="http://stormyjettest.github.io">Test Site</a>
+                <li><a href="explain.html">Test Site</a>
                 </li>
 
             </ul>
