--- a/nostalgia/index-beforeuni.html
+++ b/nostalgia/index-beforeuni.html
@@ -102,11 +102,11 @@
             <h3>My name is StormyJet, I make Internety things.</h3>
     </center>
     <center>
-        <p>I make <a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/landing.html">Meteor Game.</a> 
+        <p>I make <a href="explain.html">Meteor Game.</a> 
             <br>I also make <a href="https://www.youtube.com/user/ItsStormyJet"> videos on YouTube that are quite silly.</a>
             <br>And also sometimes make <a href="https://play.google.com/store/music/artist/StormyJet?id=Aouzwuvng6wjmxh2ewz4lf2t7em"> music </a>
-            <br>I tweet other things on my twitter account <a href="http://www.twitter.com/stormyjet">@StormyJet</a> and occasionally make comics at <a href="http://musicalpastriescomics.tumblr.com/">here.</a>
-            <br>My personal blog that I sometimes update can be found <a href="http://www.stormysblog.tumblr.com"> here.</a>
+            <br>I tweet other things on my twitter account <a href="http://www.twitter.com/stormyjet">@StormyJet</a> and occasionally make comics at <a href="explain.html">here.</a>
+            <br>My personal blog that I sometimes update can be found <a href="explain.html"> here.</a>
             I sometimes make things in <a href="https://github.com/stormyjet/stormyjet.github.io">HTML (this site)</a> and I'm excitedly waiting for Watch_Dogs.
             <br>
             <br>-Stormy
