Update Things and try a iframe preload

--- a/things.html
+++ b/things.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
 <script src="core/js/bootstrap.min.js"></script>
 
@@ -76,11 +75,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
+                    <li><a href="index.html">Home</a>
                     </li>
                     <li><a href="blog.html">Blog</a>
                     </li>
-                    <li><a href="things.html">Things I Made</a>
+                    <li class="active"><a href="#">Things I Made</a>
                     </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
@@ -126,30 +125,30 @@
         <div>
             <div class="jumbotron">
                 <center>
-                    <p style="font-size: 750%;word-wrap:break-word;">Stormy's Website</p>
+                    <p style="font-size: 750%;word-wrap:break-word;">Things I made.</p>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" style="font-size: 200%;"></div>
 
             </div>
             <!--end the gray box-->
-            <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
+            <p class="lead">Hello! These are the things I have made and are readily available to view online!
                 <br>
                 <a href="random/cancer.html">The free online cancer checker</a>
                 <br>
-                <a href="stuff/pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                <a href="stuff/pokecrate/index.html">I redesigned the website for Pokecrate once.</a>
                 <br>
                 <a href="random/NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
                 <br>
                 <a href="random/YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
                 <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
-                <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
+                <a href="meteor/index.html">I also made a Meteor Game once. It's quite difficult.</a>
+                <br>You can stalk me at my<a href="http://twitter.com/stormyjet"> Twitter </a>and not Facebook because I don't have one.
                 <br>
             </p>
-            <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
             </center>
         </div>
         <hr>
-        <!-- 3 columns -->
+        <!-- 
         <div class="row ">
             <div class="col-lg-4 ">
                 <h2>Meteor Game</h2>
@@ -174,7 +173,7 @@
                 <p><a class="btn btn-primary " href="blog.html" role="button ">Go now &raquo;</a>
                 </p>
             </div>
-        </div>
+        </div>-->
         <br>
         <hr>
         <!-- Footer Begins Here -->
