--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,9 @@
                     </li>
                     <li class="active"><a href="#">Blog</a>
                     </li>
-                    <li class="dropdown">
+                    <li><a href="things.html">Things I Made</a>
+                    </li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="random/cancer.html">Cancer Checker</a>
@@ -73,7 +75,7 @@
                             <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
@@ -91,6 +93,13 @@
     </div>
     <!--Nav ends here-->
     <div id="content">
+        <script>
+            $('iframe').css('display', 'none');
+            $('iframe').load(function() {
+                $('iframe').css('display', 'block');
+                $('#preload-img').css('display', 'none');
+            });
+        </script>
         <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
         < /div>
 </body>
