--- a/nostalgia/explain.html
+++ b/nostalgia/explain.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>404</title>
+    <title>Whoops!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://stormyjet.com/core/css/bootstrap.min.css" rel="stylesheet">
