--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <script src="core/js/bootstrap.min.js"></script>
 
 <head>
-    <meta name="description" content="This is the official website for StormyJet. I don\'t know why I said official because I\'m not popular enough for fakes.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="This is the official website for StormyJet. I don't know why I said official because I'm not popular enough for fakes.">
     <meta name="keywords" content="stormy , stormyjet , stormys website , website ">
     <meta name="robot" content="index,follow">
     <meta name="author" content="stormyjet">
