--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,13 @@
 <script src="core/js/google.js"></script>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="This is the official website for StormyJet. I don't know why I said official because I'm not popular enough for fakes.">
+    <meta name="keywords" content="stormy , stormyjet , stormys website , website ">
+    <meta name="robot" content="index,follow">
+    <meta name="author" content="stormyjet">
+    <meta name="language" content="en-us">
+    <meta name="revisit-after" content="30">
     <link rel="shortcut icon" href="/core/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/core/img/apple-touch-icon-114x114.png">
