--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <center>
                     <p class="bigtext">Stormy's Website</p>
                     <!--Candies are shown here, if they don't load, the text is shown-->
-                    <div id="candy" style="font-size: 200%;"></div>
+                    <div id="candy" class="subtext"></div>
 
             </div>
             <!--end the gray box-->
