--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <center>
                     <div class="hidden-sm">
                         <!--Hidden on Mobile-->
-                        <p class="bigtext">Stormy's Website</p>
+                        <p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>
                     </div>
-                    <div class="hidden-md">
+                    <div class="hidden-md hidden-lg">
                         <h3>Stormy's Website</h3>
                     </div>
                     <!--Candies are shown here, if they don't load, the text is shown-->
