--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     <!--Nav ends here-->
     <center>
         <div class="visible-xs">
-            <div class="alert alert-info" role="alert"><strong>Hey!</strong>Your screen may be too small for this website. Tyr going landscape or going to a desktop!</div>
+            <div class="alert alert-info" role="alert"><strong>Hey!</strong>
+                <br>Your screen may be too small for this website. Try going landscape or going to a desktop!</div>
         </div>
         <p class="nocss ">Whoa there.
             <br>Looks like the page didn't load properly.
@@ -130,12 +131,12 @@
         <div>
             <div class="jumbotron">
                 <center>
-                    <div class="hidden-sm">
+                    <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
                         <p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>
                     </div>
                     <div class="hidden-md hidden-lg">
-                        <h3>Stormy's Website</h3>
+                        <h2>Stormy's Website</h2>
                     </div>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" class="subtext"></div>
