Make it less annoying

--- a/index.html
+++ b/index.html
@@ -115,10 +115,7 @@
     </div>
     <!--Nav ends here-->
     <center>
-        <div class="visible-xs">
-            <div class="alert alert-info" role="alert"><strong>Hey!</strong>
-                <br>Your screen may be too small for this website. Try going landscape or going to a desktop!</div>
-        </div>
+
         <p class="nocss ">Whoa there.
             <br>Looks like the page didn't load properly.
             <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
@@ -196,6 +193,10 @@
                 </p>
 
             </center>
+            <div class="visible-xs">
+                <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
+                    <br>Your screen may be too small for this website. Try going landscape or going to a desktop!</div>
+            </div>
         </div>
 
     </div>
