Okay and add it to nostalgia

--- a/nostalgia/index-afteruni.html
+++ b/nostalgia/index-afteruni.html
@@ -28,6 +28,10 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+<div class="visible-xs">
+    <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
+        <br>This page is old. It is a responsive webpage but it probably looks like crap. It is not made for this small of a screen. Sorry if it looks strange!</div>
+</div>
 
 <body>
 
