--- a/nostalgia/index-beforeuni.html
+++ b/nostalgia/index-beforeuni.html
@@ -25,6 +25,10 @@
     <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
+<div class="visible-xs">
+    <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
+        <br>This page is old. It is a responsive webpage but it probably looks like crap. It is not made for this small of a screen. Sorry if it looks strange!</div>
+</div>
 
 <body>
     <!--[if lt IE 7]>
