--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                         <p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>
                     </div>
                     <div class="hidden-md hidden-lg">
-                        <h2>Stormy's Website</h2>
+                        <!-- Hidden on Non-Mobile-->
+                        <h1><strong>Stormy's Website</strong></h1>
                     </div>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" class="subtext"></div>
