--- a/meteor/index.html
+++ b/meteor/index.html
@@ -98,7 +98,7 @@
                         <hr>
                         <div class="footer">
                             <p>
-                                Made by StormyJet. Uses code from Bootstrap. StormyJet.com is <a href="open.html">open source</a>.
+                                Made by StormyJet. Uses code from Bootstrap.
                             </p>
                         </div>
                 </center>
