--- a/random/YourMom.html
+++ b/random/YourMom.html
@@ -26,12 +26,13 @@
                 <p class="notfound">
                     Your mom is so
                     <div id="first" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
-                    that she
-                    <div id="second" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
-                    <br>
-                    <button type="button" class="btn btn-lg">
-                        <a style="color:black;float:right;" href="YourMom.html">Another!</a>
-                    </button>
+                    <p class="notfound">
+                        that she
+                        <div id="second" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
+                        <br>
+                        <button type="button" class="btn btn-lg">
+                            <a style="color:black;float:right;" href="YourMom.html">Another!</a>
+                        </button>
 
 
 
