--- a/random/YourMom.html
+++ b/random/YourMom.html
@@ -10,7 +10,9 @@
 <link href="css/justified-nav.css" rel="stylesheet">
 <div class="container">
     <div>
-
+        <noscript>
+            <h1>Javascript is required for this page friend.</h1>
+        </noscript>
         <center>
 
             <body>
@@ -26,10 +28,10 @@
 
                 <p class="notfound">
                     Your mom is so</p>
-                <div id="first" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
+                <div id="first" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
                 <p class="notfound">
                     that she</p>
-                <div id="second" style="font-size: 500%;text-align: center;word-wrap: break-word;color:black">loading...</div>
+                <div id="second" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red">loading...</div>
                 <br>
                 <button type="button" class="btn btn-lg">
                     <a style="color:black;float:right;" href="YourMom.html">Another!</a>
