--- a/things.html
+++ b/things.html
@@ -51,14 +51,6 @@
             <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
         </div>-->
     </center>
-    <noscript>
-        <div class="alert alert-info">
-            <center>
-                <h2><strong>Candies are Disabled.</strong></h2>
-                <h3>To reenable, turn on javascript for this website.</h3>
-            </center>
-        </div>
-    </noscript>
     <!--Nav Begins Here-->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -69,7 +61,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website
+                <a class="navbar-brand" href="index.html">Stormy's Website
                 </a>
 
 
@@ -81,6 +73,8 @@
                     <li><a href="blog.html">Blog</a>
                     </li>
                     <li class="active"><a href="#">Things I Made</a>
+                    </li>
+                    <li><a href="todo.html">To Do List</a>
                     </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
