WHY DO I DO THIS AT 1147 I AM TIEED AND SLEEP NOW NO I DONT CATE THAT THOIUWFHE[WOIRHGREF CUIJFDg

--- a/template.html
+++ b/template.html
@@ -143,7 +143,7 @@
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>Hiring</h2>
+                <h2>ANOTHER BOX </h2>
 
                 <p>Omg!
                     <br>A box without a button!
@@ -154,7 +154,7 @@
             <div class="col-lg-4 ">
                 <h2>phew</h2>
                 <p>this one has a button</p>
-                <p><a class="btn btn-primary " href="#" role="button ">Go now &raquo;</a>
+                <p><a class="btn btn-primary " href="#" role="button ">YAY &raquo;</a>
                 </p>
             </div>
         </div>-->
