--- a/topsecret.html
+++ b/topsecret.html
@@ -9,7 +9,7 @@
 </head>
 <center>
     <a href="index.html">
-        <img src="img/garywashere.jpg" />
+        <img src="core/img/garywashere.jpg" />
     </a>
     <audio autoplay loop preload="auto">
         <source src="core/sound/interiorcrocodilealligator.mp3" type="audio/mpeg">
